--- a/assets/plugin.css
+++ b/assets/plugin.css
@@ -12,7 +12,7 @@ a.popup span{
     max-width:800px;
     background-color: rgb(201, 220, 224);
     box-shadow:0px 2px 3px #888888;   /* X-axis offset, Y-axis offset, size, color */
-    color:black;
+    color:#444444;
     line-height: 135%;
     white-space: nowrap;
     font-weight:normal;
